; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2400pci.c_rt2400pci_bbp_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2400pci.c_rt2400pci_bbp_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2x00_dev = type { i32 }

@BBPCSR_REGNUM = common dso_local global i32 0, align 4
@BBPCSR_BUSY = common dso_local global i32 0, align 4
@BBPCSR_WRITE_CONTROL = common dso_local global i32 0, align 4
@BBPCSR = common dso_local global i32 0, align 4
@BBPCSR_VALUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt2x00_dev*, i32, i32*)* @rt2400pci_bbp_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt2400pci_bbp_read(%struct.rt2x00_dev* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.rt2x00_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.rt2x00_dev* %0, %struct.rt2x00_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %9 = getelementptr inbounds %struct.rt2x00_dev, %struct.rt2x00_dev* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %12 = call i64 @WAIT_FOR_BBP(%struct.rt2x00_dev* %11, i64* %7)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %28

14:                                               ; preds = %3
  store i64 0, i64* %7, align 8
  %15 = load i32, i32* @BBPCSR_REGNUM, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @rt2x00_set_field32(i64* %7, i32 %15, i32 %16)
  %18 = load i32, i32* @BBPCSR_BUSY, align 4
  %19 = call i32 @rt2x00_set_field32(i64* %7, i32 %18, i32 1)
  %20 = load i32, i32* @BBPCSR_WRITE_CONTROL, align 4
  %21 = call i32 @rt2x00_set_field32(i64* %7, i32 %20, i32 0)
  %22 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %23 = load i32, i32* @BBPCSR, align 4
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @rt2x00mmio_register_write(%struct.rt2x00_dev* %22, i32 %23, i64 %24)
  %26 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %27 = call i64 @WAIT_FOR_BBP(%struct.rt2x00_dev* %26, i64* %7)
  br label %28

28:                                               ; preds = %14, %3
  %29 = load i64, i64* %7, align 8
  %30 = load i32, i32* @BBPCSR_VALUE, align 4
  %31 = call i32 @rt2x00_get_field32(i64 %29, i32 %30)
  %32 = load i32*, i32** %6, align 8
  store i32 %31, i32* %32, align 4
  %33 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %34 = getelementptr inbounds %struct.rt2x00_dev, %struct.rt2x00_dev* %33, i32 0, i32 0
  %35 = call i32 @mutex_unlock(i32* %34)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @WAIT_FOR_BBP(%struct.rt2x00_dev*, i64*) #1

declare dso_local i32 @rt2x00_set_field32(i64*, i32, i32) #1

declare dso_local i32 @rt2x00mmio_register_write(%struct.rt2x00_dev*, i32, i64) #1

declare dso_local i32 @rt2x00_get_field32(i64, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
